<resources>
    <string name="app_name">Notes</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_new_note">New Note</string>
    <string name="zero">0</string>
    <string name="textEntry">Enter note text</string>
    <string name="tagsEntry">Enter tags, separated by a space</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="title_activity_edit_note">Edit Note</string>
    <string name="search">Search</string>
    <string name="info">Info</string>
    <string name="title_activity_info">Info</string>
    <string name="author">
    	Developed by Jake Dawkins
    	\nhttp://jakedawkins.com
    </string>
    <string name="instructions_title">Instructions</string>
    <string name="instructions_content">
    	To create a new note, tap the plus at the bottom of the main window. 
    	\nTo edit a note, tap the note in the main window
    </string>
    <string name="ack_title">Acknowledgments</string>
    <string name="ack_content">Changing Launcher Icon:\nhttp://stackoverflow.com/questions/26615889/how-to-change-the-launcher-logo-of-an-app-in-android-studio\n\nIcon Template for Sketch 3:\nhttp://www.sketchappsources.com/resource/download-477.html\n\nRemoving View Programmatically:\nhttp://stackoverflow.com/questions/3805599/add-delete-view-from-layout\n\nHandling Images in SQLite:\nhttp://www.codeproject.com/Articles/995286/Saving-an-image-in-a-SQLite-database-in-your-Andro\n</string>
    <string name="title_activity_search">Search</string>
    <string name="addAPhoto">Add a Photo</string>
    <string name="remove">Remove</string>
    <string name="something_new_title">Something New</string>
    <string name="something_new">Adding an image to a note. The app saves the image locally with a path in the Database.</string>
    <string name="issues_title">Known Issues</string>
    <string name="issues">The image icons in lists of notes don\'t show for the first item in the list.</string>
    <string name="title_activity_login">Login</string>
    <string name="loginToThrownote">Login to ThrowNote</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="newUser">New User</string>
    <string name="title_activity_view_note">ViewNoteActivity</string>
    <string name="edit">Edit</string>
    <string name="textContent">Text Content</string>
</resources>
