<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.jakedawkins.notes.NewNote"
    tools:showIn="@layout/activity_new_note">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView3" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/imageView"
                android:src="@drawable/note" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/zero"
                android:id="@+id/characterCount"
                android:layout_gravity="end" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/enterTextContent"
                android:maxLength="256"
                android:hint="@string/textEntry" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linearImageAndButtonView"
                android:layout_marginTop="10dp"
                >

                <ImageView
                    android:layout_height="wrap_content"
                    android:id="@+id/newImage"
                    android:layout_width="0px"
                    android:layout_weight="1"
                    android:maxHeight="100dp"
                    android:maxWidth="100dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/note"
                    android:layout_gravity="center"
                    />

                <Button
                    android:layout_width="0px"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/remove"
                    android:id="@+id/button"
                    android:textColor="#ffffff"
                    android:background="#ad0000"
                    android:onClick="removePhoto"
                    />
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addAPhoto"
                android:id="@+id/newPhotoButton"
                android:onClick="newPhoto"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:textColor="#ffffff"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recordAudio"
                android:id="@+id/newAudioButton"
                android:onClick="newAudioRecordingButton"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:textColor="#ffffff"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:id="@+id/saveButton"
                android:onClick="saveNote"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:textColor="#ffffff"
                />


        </LinearLayout>
    </ScrollView>

</RelativeLayout>
